--- a/main.css
+++ b/main.css
@@ -875,11 +875,7 @@ body.info-expanded .container > .sidebar-info .sidebar-info__toggle-button {
   gap: 40px;
 }
 .dashboard__search {
-  align-self: flex-start;
-  display: grid;
-  grid-template-columns: 24px 1fr;
-  gap: 6px;
-  width: 514px;
+  width: 650px;
   padding-bottom: 8px;
   border-bottom: 2px solid rgba(212, 227, 240, 0.8509803922);
   margin-bottom: 20px;
@@ -1208,41 +1204,10 @@ body.info-expanded .container > .sidebar-info .sidebar-info__toggle-button {
   width: 100dvw;
 }
 
-@media screen and (max-width: 900px) {
-  .dashboard .metrics {
-    grid-template-columns: repeat(2, 1fr);
-  }
+.desktop .dashboard .metrics .columns-item:nth-child(3) .metrics__item__chart img {
+  width: 40%;
 }
-@media screen and (max-width: 1140px) {
-  .dashboard .metrics {
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-  }
-  .dashboard .metrics__item {
-    max-width: 350px;
-  }
-  .dashboard .metrics__item:nth-child(3) .metrics__item__chart img {
-    width: 30%;
-  }
-}
-@media screen and (min-width: 1500px) {
-  .dashboard .sessions {
-    gap: 30px;
-  }
-  .dashboard .sessions__item__icon {
-    width: 45px;
-    height: 45px;
-  }
-  .dashboard .sessions__item__icon svg {
-    width: 18px;
-    height: 18px;
-  }
-}
-@media screen and (min-width: 1024px) {
-  .dashboard .metrics__item:nth-child(3) .metrics__item__chart img {
-    width: 40%;
-  }
-}
+
 @media screen and (min-width: 1440px) {
   .dashboard .metrics__item {
     padding: 28px;
@@ -1254,20 +1219,16 @@ body.info-expanded .container > .sidebar-info .sidebar-info__toggle-button {
   .dashboard .metrics__item__chart img {
     max-width: none;
   }
-  .dashboard .metrics__item:nth-child(1) .metrics__item__chart img {
+  .dashboard .metrics .columns-item:nth-child(1) .metrics__item__chart img {
     width: 60%;
   }
-  .dashboard .metrics__item:nth-child(2) .metrics__item__chart img {
+  .dashboard .metrics .columns-item:nth-child(2) .metrics__item__chart img {
     width: 80%;
   }
 }
 @media screen and (min-width: 1920px) {
   .dashboard {
     gap: 5%;
-  }
-  .dashboard__search {
-    grid-template-columns: 36px 1fr;
-    width: min(60%, 1000px);
   }
   .dashboard__search-button {
     width: 36px;
@@ -1279,7 +1240,7 @@ body.info-expanded .container > .sidebar-info .sidebar-info__toggle-button {
   .dashboard .metrics__item {
     padding-bottom: 50px;
   }
-  .dashboard .metrics__item:nth-child(3) .metrics__item__chart img {
+  .dashboard .metrics .columns-item:nth-child(3) .metrics__item__chart img {
     width: 30%;
   }
   .dashboard .sessions {
@@ -1306,112 +1267,71 @@ body.info-expanded .container > .sidebar-info .sidebar-info__toggle-button {
     height: 26px;
   }
 }
-@media screen and (min-width: 600px) and (max-width: 1023px) {
-  .dashboard {
-    width: 100%;
-    border-radius: 0;
-  }
-  .dashboard__content {
-    width: 100%;
-    padding-right: 45px;
-  }
-  .dashboard .metrics__item:nth-child(3) .metrics__item__chart img {
-    width: 30%;
-  }
-  .dashboard .heart-rate {
-    grid-template-columns: repeat(2, 1fr);
-    justify-items: center;
-  }
-  .dashboard .heart-rate__item {
-    max-width: 500px;
-  }
-  .dashboard .sessions {
-    grid-template-columns: none;
-    grid-template-rows: repeat(2, 1fr);
-    justify-items: center;
-  }
-  .dashboard .sessions__item {
-    max-width: 500px;
-  }
+.tablet .dashboard {
+  border-radius: 0;
 }
-@media screen and (max-width: 850px) {
-  .dashboard .heart-rate {
-    grid-template-columns: repeat(1, 1fr);
-  }
+.tablet .dashboard__content {
+  width: 100%;
+  padding-left: 45px;
+  padding-right: 45px;
 }
-@media screen and (max-width: 715px) {
-  .dashboard__search {
-    width: 90%;
-  }
-  .dashboard__search-input {
-    font-size: 12px;
-  }
-  .dashboard .metrics {
-    grid-template-columns: repeat(1, 1fr);
-  }
+.tablet .dashboard .metrics__item {
+  margin: 0 auto;
+  max-width: 400px;
 }
-@media screen and (max-width: 599px) {
-  .dashboard {
-    width: 100%;
-    border-radius: 0;
-  }
-  .dashboard__content {
-    width: 100%;
-    padding: 100px 50px 50px 50px;
-  }
-  .dashboard__search {
-    width: 100%;
-  }
-  .dashboard .metrics {
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .dashboard .metrics__item {
-    max-width: 400px;
-  }
-  .dashboard .metrics__item:nth-child(3) .metrics__item__chart img {
-    width: 30%;
-  }
-  .dashboard .heart-rate {
-    grid-template-columns: repeat(1, 1fr);
-    justify-items: center;
-  }
-  .dashboard .heart-rate__item {
-    max-width: 500px;
-    aspect-ratio: unset;
-  }
-  .dashboard .sessions {
-    grid-template-columns: none;
-    grid-template-rows: repeat(1, 1fr);
-    justify-items: center;
-  }
-  .dashboard .sessions__item {
-    max-width: 500px;
-  }
-  .dashboard .sessions__item__header {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    gap: 30px;
-  }
-  .dashboard .sessions__item__title {
-    width: 100%;
-  }
-  .dashboard .sessions__item__status {
-    font-size: 16px;
-  }
+.tablet .dashboard .metrics .columns-item:nth-child(3) .metrics__item__chart img {
+  width: 30%;
 }
-@media screen and (max-width: 450px) {
-  .dashboard .sessions__item {
-    aspect-ratio: unset;
-    gap: 20px;
-  }
-  .dashboard .sessions__item__metrics {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    row-gap: 16px;
-  }
+.tablet .dashboard .heart-rate__item {
+  margin: 0 auto;
+  max-width: 500px;
 }
+.tablet .dashboard .sessions__item {
+  margin: 0 auto;
+  max-width: 500px;
+}
+
+.phone .dashboard {
+  width: 100%;
+  border-radius: 0;
+}
+.phone .dashboard__content {
+  width: 100%;
+  padding: 100px 50px 50px 50px;
+}
+.phone .dashboard__search {
+  width: 100%;
+}
+.phone .dashboard .metrics__item {
+  margin: 0 auto;
+  max-width: 400px;
+}
+.phone .dashboard .metrics .columns-item:nth-child(3) .metrics__item__chart img {
+  width: 30%;
+}
+.phone .dashboard .heart-rate__item {
+  margin: 0 auto;
+  max-width: 500px;
+  aspect-ratio: unset;
+}
+.phone .dashboard .sessions__item {
+  margin: 0 auto;
+  max-width: 500px;
+}
+.phone .dashboard .sessions__item__header {
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 30px;
+}
+.phone .dashboard .sessions__item__title {
+  width: 100%;
+}
+.phone .dashboard .sessions__item__status {
+  font-size: 16px;
+}
+
 body {
   color: #FFFFFF;
   overflow: hidden;
